2007-04-27  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.h.in, main.c, user.c, sievecmd.c, export.c, maintenance.c:
	Version and copyright cleanup on -V command line option.

2007-04-25  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4, configure.in, dbmail.h.in, dbmail.conf, authmodule.c,
	dbmodule.c, sortmodule.c:
	Added compile and runtime configuration of 'pkglibdir' for
	runtime loaded modules.
	* acinclude.m4, configure.in, Makefile.am:
	Added support for --disable-manual configure flag.
	* db.c,  check_dbmail_db.c:
	Fixed db_replycache_validate and added test cases to prove it.

2007-04-23  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c:
	replace lingering dm_free call
	* imapcommands.c:
	re-initialize msginfo in session before _do_store (closes #565)
	* pool.c:
	dont access scoreboard during cli server run

2007-04-20  Aaron Stone  <aaron@serendipity.cx>

	* dsn.c, check_dbmail_dsn.c:
	Corrected bounds checking for dsn_tostring (closes bug #570)

2007-04-13  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Some work in db_set_msgflag to help with bug #568

2007-04-09  Paul J Stevens <paul@nfg.nl>

	* pool.c, pool.h, serverchild.c:
	fix a couple of minor compiler warnings
	* check_dbmail_imapd.c:
	replace lingering dm_free call
	* imapcommands.c:
	re-initialize msginfo in session before _do_store (closes #565)
	* pool.c:
	dont access scoreboard during cli server run

2007-04-08  Aaron Stone  <aaron@serendipity.cx>

	* check_dbmail_deliver.c dbmail-user.c lmtp.c user.c imap4.h db.c
	modules/authsql.c modules/authldap.c modules/sortsieve.c quota.c
	debug.h acl.c imapcommands.c dsn.c pipe.c dm_base64.c dbmail-message.c
	check_dbmail_db.c sievecmd.c dbmail-imapsession.c main.c timsieve.c
	memblock.c misc.c:
	Changed all instances of dm_free, dm_malloc, dm_strdup to g_free,
	g_new0 or g_malloc, g_strdup, respectively.
	* dbmail-mailbox.c dbmail-message.c misc.c sort.c:
	Corrected printf arguments that made 32 bit platform assumptions.
