@@ -1,3 +1,8 @@
+2007-05-01  Aaron Stone  <aaron@serendipity.cx>
+
+	* modules/dbpgsql.c:
+	Added a message about sqlsocket (closes bug #527)
+
 2007-04-27  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail.h.in, main.c, user.c, sievecmd.c, export.c, maintenance.c:
